--- a/index.html
+++ b/index.html
@@ -23,5 +23,5 @@
       <div id="planets"></div>
       <div id="pagination"></div>
     </div>
-  </body>
+    <script src="src/script.js"></script>
 </html>
