updated the script and style.css file

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="text-center mt-5">Star Wars Planets Directory</h1>
+      <h1 class="text-center mt-5 mb-5">Star Wars Planets Directory</h1>
       <div id="planets"></div>
-      <div id="pagination"></div>
+      <div id="pagination" class="pagination"></div>
     </div>
     <script src="src/script.js"></script>
 </html>
